crates/evm-coder/tests/build_failed/abi_derive_generation.stderr
error: Empty structs not supported
 --> tests/build_failed/abi_derive_generation.rs:4:8
  |
4 | struct EmptyStruct {}
  |        ^^^^^^^^^^^

error: Empty structs not supported
 --> tests/build_failed/abi_derive_generation.rs:7:8
  |
7 | struct EmptyTupleStruct();
  |        ^^^^^^^^^^^^^^^^
